<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">NMedia</string>
    <string name="welcome_text">NMedia!</string>

    <string name="author">Netology. University of Internet Professions</string>
    <string name="published">21 May at 18:36</string>

    <string name="post_content">Hi, this is the new Netology! Once Netology started with intensive courses in online marketing. Then courses in design, development, analytics, and management appeared. We grow and help our students grow: from beginners to confident professionals. But the most important thing stays with us: we believe everyone already has the strength to want more, aim higher, and run faster. Our mission is to help you start growing and begin a chain of change → http://netolo.gy/fyb</string>

    <string name="avatar_description">Netology logo</string>
    <string name="menu_description">More options</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="views">Views</string>

    <string name="likes_count" translatable="false">10</string>
    <string name="shares_count" translatable="false">5</string>
    <string name="views_count" translatable="false">5</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Enter post text</string>
    <string name="save_post">Save post</string>
    <string name="error_empty_content">Post text can\'t be empty</string>
    <string name="editing_post">Editing post</string>
    <string name="cancel_editing">Cancel editing</string>

    <string name="add_post">Add post</string>
    <string name="new_post">New post</string>
    <string name="edit_post">Edit post</string>
    <string name="post_content_hint">Post text</string>
    <string name="video_link_hint">RUTUBE video link</string>
    <string name="video_preview">Video preview</string>
    <string name="open_video">Open video</string>
    <string name="no_app_for_video">No application can open this video</string>
    <string name="chooser_share_post">Share post</string>

</resources>